<resources>
    <string name="app_name">Rumah Quran Cianjur (Guru)</string>
    <string name="sign_up_now">Daftar Sekarang</string>
    <string name="input_email">Masukan Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="btn_login">Masuk</string>
    <string name="txt_register">Belum punya akun?</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="user_phone">No. Telepon</string>
    <string name="re_type_password">Retype Password</string>
    <string name="register">Buat Akun</string>
    <string name="warning_input_data">Data tidak boleh ada yang kosong</string>
    <string name="email_not_valid">Email yang dimasukan tidak valid</string>
    <string name="register_failed">Registrasi gagal, silakan coba lagi</string>
    <string name="password_not_valid">Password yang dimasukan tidak sama</string>
    <string name="register_success">Registrasi berhasil</string>
    <string name="error_user_not_found">Email atau Password salah</string>
    <string name="error_wrong_password">Password yang anda masukan salah</string>
    <string name="error_request">Terjadi kesalahan, silakan coba lagi</string>
    <string name="email_password_null">Masukan Email dan Password</string>
    <string name="lupa_password">Reset Password</string>
    <string name="send_reset_password">Silakan cek Inbox pada Email anda</string>
    <string name="request_data">...........</string>
    <string name="request_error">Data gagal dimuat, silakan coba lagi</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="btn_simpan">Simpan</string>
    <string name="success_edit_profile">Profil berhasil di ubah</string>
    <string name="txt_email_autentikasi">*Email ini digunakan untuk proses login</string>
    <string name="upload_failed">Upload Gagal</string>
    <string name="failed_show_photo">Gagal Menampilkan Foto</string>
    <string name="upload_success">Foto berhasil diunggah</string>
    <string name="data_not_found">Tidak ada data yang dimuat</string>
    <string name="btn_send">Kirim</string>
    <string name="full_address">Alamat Lengkap</string>
    <string name="rb_male">Laki-laki</string>
    <string name="rb_famale">Perempuan</string>
    <string name="experiance">Pengalaman Mengajar</string>
    <string name="tv_gender">Jenis Kelamin</string>
    <string name="txt_information">Anda belum disetujui. Silakan klik tombol dibawah ini untuk meminta persetujuan Admin.</string>
    <string name="btn_request">Minta Persetujuan</string>
    <string name="chat">Pesan</string>
    <string name="profil">Profil</string>
    <string name="class_room">Kelas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_time">06.00 – 13.00</string>
    <string name="tv_total_student">Jumlah Santri:</string>
    <string name="tv_lesson">Lesson</string>
    <string name="tv_teacher_name">Teacher Name</string>
    <string name="tv_no_message">Tidak ada pesan yang masuk</string>
    <string name="not_photo">Foto Profil Tidak Boleh Kosong</string>
    <string name="logout_suecss">Logout Berhasil</string>
    <string name="tv_no_class_found">Belum Ada Kelas Yang Aktif</string>
    <string name="input_name">Nama</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="btn_edit_profile">Simpan Perubahan</string>
    <string name="change_photo">Foto Berhasil Diubah</string>
    <string name="no_installed_message">Aplikasi Whatsapp tidak terpasang di ponsel Anda</string>
    <string name="tv_level">Level</string>
    <string name="no_post_active">Belum Ada Postingan</string>
    <string name="input_message">Ketik Pesan</string>
    <string name="input_post_text">Tulis Sesuatu</string>
    <string name="btn_upload">Upload Berkas</string>
    <string name="success_upload_post">Postingan Berhasil Diunggah</string>
    <string name="update_success">Postingan Berhasil Diubah</string>
    <string name="post_menu">Posting</string>
    <string name="message">message</string>
    <string name="post_has_editted">Postingan Berhasil Diedit</string>
    <string name="upload_file">Unggah File</string>
    <string name="no_data">-</string>
    <string name="view_assignment">Unduh File</string>
    <string name="tv_username">Username</string>
    <string name="tv_nomor_induk">Nomor induk</string>
    <string name="loading_progress">Sedang Memuat.....</string>
    <string name="btn_download_document">Unduh File</string>
    <string name="tv_graded">Pengumpulan Tugas</string>
    <string name="txt_no_graded">Belum ada yang mengirimkan tugas</string>
    <string name="tv_submission">File Yang Akan Dikirim</string>
    <string name="input_grade">Masukan Nilai 0 – 100</string>
    <string name="grade_menu">BERI NILAI</string>
    <string name="input_text">Tulis Sesuatu</string>
    <string name="btn_attach">Melampirkan</string>
    <string name="grade">Grade: 0/100</string>
    <string name="assignment_status">Status</string>
    <string name="nothing_member">Belum ada santri yang masuk</string>
    <string name="submit">Kirim</string>
    <string name="btn_view_assignment">Detail Tugas</string>
</resources>
