<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.GradedActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_layout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_submission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_submission"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_submission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/request_data"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txt_submission"
                app:layout_constraintStart_toStartOf="@+id/txt_submission"
                app:layout_constraintTop_toBottomOf="@+id/txt_submission" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_grade"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/input_grade"
                app:layout_constraintEnd_toEndOf="@+id/tv_submission"
                app:layout_constraintStart_toStartOf="@+id/tv_submission"
                app:layout_constraintTop_toBottomOf="@+id/tv_submission"
                app:startIconDrawable="@drawable/ic_star_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_download_document"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:cornerRadius="@dimen/btn_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/layout_input_grade"
                app:layout_constraintStart_toStartOf="@+id/layout_input_grade"
                app:layout_constraintTop_toBottomOf="@+id/layout_input_grade"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>